--- a/concepttest-app/public/views/signup.html
+++ b/concepttest-app/public/views/signup.html
@@ -25,7 +25,7 @@
   <!-- Match Media polyfill for IE9 -->
   <!--[if IE 9]><!--> <script src="scripts/ie/matchMedia.js"></script>  <!--<![endif]--> 
  </head>
- <body ng-app="loginapp" id="loginapp" ng-controller="Signup" ng-init="init()">
+ <body ng-app="app.ui.login" id="loginapp" ng-controller="Signup" ng-init="init()">
 
   <div class="page page-auth clearfix">
 
