Se agrego estilos para wizard

--- a/concepttest-app/public/styles/main.less
+++ b/concepttest-app/public/styles/main.less
@@ -19,7 +19,7 @@
 // Import Pages
 //@import "pages/dashboard-v1.less";
 //@import "pages/dashboard-v2.less";
-//@import "pages/form-wizard.less";
+@import "pages/form-wizard.less";
 @import "pages/auth.less";
 //@import "pages/lock-screen.less";
 @import "pages/err.less";
