--- a/concepttest-app/public/views/admin/manageTests.html
+++ b/concepttest-app/public/views/admin/manageTests.html
@@ -9,7 +9,99 @@
 
  <div class="page-wrap">
   <div class="row">
-   <div class="col-lg-12"></div>
+   <div class="col-lg-12" ng-controller="ListTests">
+    <!-- Evaluaciones publicadas -->
+   	<div class="panel panel-lined table-responsive mb30 ">
+     <div class="panel-heading"><i>Evaluaciones publicadas</i></div>
+     <div class="panel-body">
+      <form class="form-horizontal left col-lg-4">
+       <a type="button" href="#/admin/newTest" class="btn btn-default">Nueva</a>
+      </form>
+
+      <form class="form-horizontal right col-lg-4">
+       <input type="text" class="form-control input-sm" placeholder="Buscar..." data-ng-model="searchKeywords" data-ng-keyup="searchPublished()">
+      </form>
+     </div>
+
+     <table class="table table-bordered table-striped">
+      <thead>
+       <tr>
+         <th>Nombre
+          <div class="th">
+           <i class="fa fa-caret-up icon-up" ng-click=" order('name')" ng-class="{active: row == 'name'}"></i>
+           <i class="fa fa-caret-down icon-down" ng-click=" order('-name')" ng-class="{active: row == '-name'}"></i>
+          </div>
+         </th>
+         <th></th>
+         <th></th>
+       </tr>
+      </thead>
+      <tbody>
+       <tr ng-repeat="test in currentPageStores track by $index">
+         <td>{{test.name}}</td>
+         <td>Publicada</td>
+         <td><a href ng-click="edit(test._id)">Modificar</a></td>
+         <td><a href ng-click="delete(test._id)">Eliminar</a></td>
+       </tr>
+      </tbody>
+     </table>
+
+     <div class="panel-footer clearfix">
+      <p class="left mt15 small">
+      Mostrando {{currentPageStores.length*(currentPage - 1) + 1}} a {{currentPageStores.length*currentPage}} de {{datas.length}} registros
+      </p>
+      <pagination boundary-links="true" total-items="filteredData.length" ng-model="currentPage" class="pagination-sm right" 
+            max-size="5" ng-change="select(currentPage)" items-per-page="numPerPage" rotate="false"
+            previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;">
+      </pagination>
+     </div>
+
+   	</div>
+
+   	<!-- Evaluaciones en borrador -->
+   	<div class="panel panel-lined table-responsive mb30">
+     <div class="panel-heading"><i>Evaluaciones en borrador</i></div>
+     <div class="panel-body">
+      <form class="form-horizontal right col-lg-4">
+       <input type="text" class="form-control input-sm" placeholder="Buscar..." data-ng-model="searchKeywordsDraft" data-ng-keyup="searchDraft()">
+      </form>
+     </div>
+
+     <table class="table table-bordered table-striped">
+      <thead>
+       <tr>
+         <th>Nombre
+          <div class="th">
+           <i class="fa fa-caret-up icon-up" ng-click=" order('name')" ng-class="{active: row == 'name'}"></i>
+           <i class="fa fa-caret-down icon-down" ng-click=" order('-name')" ng-class="{active: row == '-name'}"></i>
+          </div>
+         </th>
+         <th></th>
+         <th></th>
+       </tr>
+      </thead>
+      <tbody>
+       <tr ng-repeat="test in currentPageStoresDraft track by $index">
+         <td>{{test.name}}</td>
+         <td>Borrador</td>
+         <td><a href ng-click="edit(test._id)">Modificar</a></td>
+         <td><a href ng-click="delete(test._id)">Eliminar</a></td>
+       </tr>
+      </tbody>
+     </table>
+
+     <div class="panel-footer clearfix">
+      <p class="left mt15 small">
+      Mostrando {{currentPageStoresDraft.length*(currentPageDraft - 1) + 1}} a {{currentPageStoresDraft.length*currentPageDraft}} de {{datasDraft.length}} registros
+      </p>
+      <pagination boundary-links="true" total-items="filteredDataDraft.length" ng-model="currentPageDraft" class="pagination-sm right" 
+            max-size="5" ng-change="select(currentPageDraft)" items-per-page="numPerPageDraft" rotate="false"
+            previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;">
+      </pagination>
+     </div>
+
+   	</div>
+   </div>
   </div>
  </div>
 </div>
