--- a/concepttest-app/public/views/admin/newTest.html
+++ b/concepttest-app/public/views/admin/newTest.html
@@ -33,10 +33,10 @@
        <!-- Paso 1: Informacion general -->
        <div class="form-horizontal col-lg-12" name="test-step-1" ng-show="steps[0]">
         <div class="form-horizontal col-lg-6">
-         <div class="form-group" ng-class="{'has-error' : newTestForm.description.$invalid && !newTestForm.description.$pristine}">
+         <div class="form-group" ng-class="{'has-error' : newTestForm.name.$invalid && !newTestForm.name.$pristine}">
           <label class="text-uppercase small text-bold">Descripci&oacute;n:</label>
-          <input type="text" name="description" class="form-control" ng-model="test.description" required>
-          <p ng-show="newTestForm.description.$invalid && !newTestForm.description.$pristine" class="help-block">La descripci&oacute;n es requerida.</p>
+          <input type="text" name="name" class="form-control" ng-model="test.name" required>
+          <p ng-show="newTestForm.name.$invalid && !newTestForm.name.$pristine" class="help-block">El nombre es requerido.</p>
          </div>
         </div>
 
@@ -105,7 +105,7 @@
         </div>
 
         <div class="form-group clearfix right">
-         <button type="button" class="btn btn-default right" ng-click="toConfiguration(1)" ng-disabled="newTestForm.description.$invalid">Siguiente</button>
+         <button type="button" class="btn btn-default right" ng-click="toConfiguration(1)" ng-disabled="newTestForm.name.$invalid">Siguiente</button>
         </div>
 
         </div>
